--- a/server/gleam.toml
+++ b/server/gleam.toml
@@ -1,5 +1,4 @@
-name = "todo_lustre"
-target = "javascript"
+name = "server"
 version = "1.0.0"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
@@ -15,11 +14,11 @@ version = "1.0.0"
 
 [dependencies]
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
-lustre = ">= 4.4.1 and < 5.0.0"
-lustre_http = ">= 0.5.2 and < 1.0.0"
-shared = { path = "../shared" }
+wisp = ">= 1.1.0 and < 2.0.0"
+mist = ">= 2.0.0 and < 3.0.0"
+gleam_erlang = ">= 0.26.0 and < 1.0.0"
 gleam_json = ">= 1.0.1 and < 2.0.0"
+shared = { path = "../shared" }
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
-lustre_dev_tools = ">= 1.5.4 and < 2.0.0"
