--- a/shared/gleam.toml
+++ b/shared/gleam.toml
@@ -1,5 +1,4 @@
-name = "todo_lustre"
-target = "javascript"
+name = "shared"
 version = "1.0.0"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
@@ -15,11 +14,7 @@ version = "1.0.0"
 
 [dependencies]
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
-lustre = ">= 4.4.1 and < 5.0.0"
-lustre_http = ">= 0.5.2 and < 1.0.0"
-shared = { path = "../shared" }
-gleam_json = ">= 1.0.1 and < 2.0.0"
+gleam_json = ">= 2.0.0 and < 3.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
-lustre_dev_tools = ">= 1.5.4 and < 2.0.0"
