--- a/server/gleam.toml
+++ b/server/gleam.toml
@@ -19,6 +19,8 @@ mist = ">= 2.0.0 and < 3.0.0"
 gleam_erlang = ">= 0.26.0 and < 1.0.0"
 gleam_json = ">= 1.0.1 and < 2.0.0"
 shared = { path = "../shared" }
+envoy = ">= 1.0.1 and < 2.0.0"
+gleam_pgo = ">= 0.14.0 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
